fix: broken compound selector exposed by browserslist bump (Table virtualizer docs, etc) (#9922)
* fix: overlapping rows in RAC Virtualizer docs table example

* fix other instances

--- a/packages/@adobe/spectrum-css-temp/components/button/index.css
+++ b/packages/@adobe/spectrum-css-temp/components/button/index.css
@@ -56,7 +56,7 @@ governing permissions and limitations under the License.
   /* Font smoothing for Firefox */
   -moz-osx-font-smoothing: grayscale;
 
-  &button {
+  button& {
     /* Correct the inability to style clickable types in iOS and Safari. */
     -webkit-appearance: button;
   }
